# pizzapp

./: CMakeLists.txt  README.md
cmake/: CompileOptions.cmake  FindDependencies.cmake  Linux.cmake  PThread.cmake  Qt5.cmake  Sources.cmake
src/: addingredientwidget.cpp  addingredientwidget.h  addingredientwidget.ui  flour.cpp  flour.h  ingredient.cpp  ingredient.h  ingredienttypes.h  main.cpp  recipecore.cpp  recipecore.h  recipecoreingredientsinputwidget.cpp  recipecoreingredientsinputwidget.h  recipecoreingredientsinputwidget.ui  recipecoreunitswidget.cpp  recipecoreunitswidget.h  recipecoreunitswidget.ui  recipecorewidget.cpp  recipecorewidget.h  recipecorewidget.ui
src/resources/: resources.qrc
test/: CMakeLists.txt  GTest.h  main.cpp
